--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cors": "^2.8.1",
     "cross-env": "^3.1.4",
     "express": "^4.14.0",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^16.1.0",
     "mongodb": "^2.2.11",
     "mongoose": "^4.7.0",
     "rand-token": "^0.3.0"
